[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "rl-gym"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "gymnasium>=0.28.0",
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "einops>=0.6.0",
    "tqdm>=4.65.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.5.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

